--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         /* Fixed Marquee Styles */
         .marquee-container {
             overflow: hidden;
-            background: #000;
-            color: #00ff00;
+            background: #ffffff;
+            color: #ff00d0;
             border: 2px inset #fff;
             width: 100%;
         }
@@ -323,18 +323,18 @@
                             <!-- Tab: Bio -->
                             <div id="content-bio" class="block h-full flex flex-col justify-between">
                                 <div>
-                                    <h1 class="text-3xl font-pixel text-purple-600 mb-2">HI, I'M YUMI! <i class="fas fa-sparkles text-yellow-400 floating"></i></h1>
+                                    <h1 class="text-3xl font-pixel text-purple-600 mb-2">HI, I'M HUH?Ley! <i class="fas fa-sparkles text-yellow-400 floating"></i></h1>
                                     <p class="font-main text-sm text-gray-700 leading-relaxed mb-4">
-                                        Illustrator | 2D Artist | Cybercore Enthusiast.<br>
-                                        Welcome to my digital shrine. I love drawing cute girls and retro tech.
+                                        Hallo! NicoAki here, the Nico in the Aki ( ͡⁠°⁠ ͜⁠ʖ⁠ ͡⁠°⁠) || A.K.A HUH?Ley | <br>
+                                        Your local Illustrator, Character Designer, 2D Artist and other drawing shmuck
                                     </p>
                                     
                                     <div class="bg-pink-100 p-2 border border-pink-300 rounded mb-2 font-pixel text-lg">
-                                        <span class="text-pink-600 font-bold">Current Obsession:</span> Tamagotchi & Serial Experiments Lain
+                                        <span class="text-pink-600 font-bold">Current Obsession:</span> Usagi from Chiikawa & my husband:3
                                     </div>
                                 </div>
                                 <div class="bg-blue-100 border border-blue-300 p-2 text-xs font-main italic text-blue-800 mt-auto">
-                                    "The wired is just another layer of reality."
+                                    "When life gives you lemon, eat the lemon raw and don't wuss out when it gets too sour"
                                 </div>
                             </div>
 
@@ -342,11 +342,11 @@
                             <div id="content-stats" class="hidden h-full">
                                 <h2 class="text-2xl font-pixel text-blue-600 mb-2">CHARACTER STATS</h2>
                                 <ul class="font-pixel text-xl space-y-2">
-                                    <li>HP: [||||||||||] 100/100</li>
-                                    <li>MP: [|||||.....] 50/100</li>
-                                    <li>EXP: Lv. 25 Artist</li>
-                                    <li>Tool: Clip Studio Paint</li>
-                                    <li>Tablet: Wacom Intuos</li>
+                                    <li>HP: [|||.......] 30/100</li>
+                                    <li>AURA POINTS: [||||||||||] 100/100</li>
+                                    <li>EXP: Lv. 11 Artist</li>
+                                    <li>Tool: Clip Studio Paint, GoPaint, Infinite Painter, and Tayasui Sketches</li>
+                                    <li>Tablet: VEIKK & Huawei Matepad</li>
                                 </ul>
                                 
                                 <div class="mt-4 flex flex-wrap gap-2">
@@ -365,7 +365,7 @@
         <!-- SECTION 2: NEWS / MARQUEE (FIXED)          -->
         <!-- ========================================== -->
         <section id="news-section">
-            <div class="win-box p-1 bg-blue-600 border-none min-h-0" id="win-news" style="resize: horizontal;">
+            <div class="win-box p-1 bg-pink-200 border-none min-h-0" id="win-news" style="resize: horizontal;">
                 <div class="marquee-container font-pixel text-xl py-1">
                     <div class="marquee-content">
                         +++ COMMISSIONS ARE OPEN! +++ CHECK "PRICES" WINDOW FOR INFO +++ NEW ARTWORK UPLOADED +++ WELCOME TO MY SITE +++
