news section and slight adjustments

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                     <li>HP: [|||.......] 30/100</li>
                                     <li>AURA POINTS: [||||||||||] 100/100</li>
                                     <li>EXP: Lv. 11 Artist</li>
-                                    <li>Tool: Clip Studio Paint, GoPaint, Infinite Painter, and Tayasui Sketches</li>
+                                    <li>Tools: Clip Studio Paint, GoPaint, Infinite Painter, and Tayasui Sketches</li>
                                     <li>Tablet: VEIKK & Huawei Matepad</li>
                                 </ul>
                                 
@@ -361,6 +361,31 @@
             </div>
         </section>
 
+        <!-- NEWS BOX -->
+         <section id="news-box" class="mt-8">
+            <div class="win-box bg-blue-50 h-auto" id="win-tos">
+                    <div class="win-header bg-gradient-to-r from-blue-400 to-blue-900 justify-between">
+                        <span>!!! NEWS !!!</span>
+                        <i class="fas fa-envelope"></i>
+                    </div>
+                    <div class="win-content font-main text-xs text-gray-800">
+                        <p class="mb-2"><strong>COMMISSIONS ARE NOW OPEN!</strong> 
+                            Check out the "PRICES" windows in the portfolio sections below for more info. Feel free to reach out via my social media links!</p>
+                        <!-- <ul class="list-disc pl-4 space-y-1">
+                            <li>Payment upfront via PayPal / Ko-fi.</li>
+                            <li>No refunds after sketch phase.</li>
+                            <li>Personal use only (commercial x2).</li>
+                            <li>Credit is absolutely needed.</li>
+                            <li>DNI: AI tech bros, haters.</li>
+                        </ul> -->
+
+                        <!-- <div class="mt-2 w-full bg-gray-200 h-2 border border-gray-400">
+                            <div class="bg-blue-600 h-full w-[80%]"></div>
+                        </div>
+                        <div class="text-right text-[10px] font-pixel mt-1">Downloading rules... 80%</div> -->
+                    </div>
+                </div>
+        </section>
         <!-- ========================================== -->
         <!-- SECTION 2: NEWS / MARQUEE (FIXED)          -->
         <!-- ========================================== -->
@@ -575,15 +600,15 @@
                 <div class="win-content no-padding bg-white relative">
                     <div id="sample-scroll-container" class="flex overflow-x-hidden scroll-smooth h-[400px] md:h-[500px]">
                         <!-- Images are flex-shrink-0 to sit side-by-side -->
-                        <div class="flex-shrink-0 h-full w-auto aspect-[4/3] relative border-r-4 border-black group">
+                        <div class="flex-shrink-0 h-full w-auto aspect-[4/3] relative border-r-4 border-white group">
                             <img src="./assets/img/zynnielle/ZYNNIELLE1.png?q=80&w=1000&auto=format&fit=crop" class="h-full w-auto object-cover">
                             <div class="absolute bottom-4 left-4 bg-white/70 text-pink-500 px-2 font-pixel text-xl border border-pink-300">ZYNNIELLE1.PNG</div>
                         </div>
-                        <div class="flex-shrink-0 h-full w-auto aspect-[4/3] relative border-r-4 border-black group">
+                        <div class="flex-shrink-0 h-full w-auto aspect-[4/3] relative border-r-4 border-white group">
                             <img src="./assets/img/zynnielle/ZYNNIELLE2.png?q=80&w=1000&auto=format&fit=crop" class="h-full w-auto object-cover">
                             <div class="absolute bottom-4 left-4 bg-white/70 text-pink-500 px-2 font-pixel text-xl border border-pink-300">ZYNNIELLE2.PNG</div>
                         </div>
-                        <div class="flex-shrink-0 h-full w-auto aspect-[4/3] relative border-r-4 border-black group">
+                        <div class="flex-shrink-0 h-full w-auto aspect-[4/3] relative border-r-4 border-white group">
                             <img src="./assets/img/zynnielle/ZYNNIELLE3.png?q=80&w=1000&auto=format&fit=crop" class="h-full w-auto object-cover">
                             <div class="absolute bottom-4 left-4 bg-white/70 text-pink-500 px-2 font-pixel text-xl border border-pink-300">ZYNNIELLE3.PNG</div>
                         <!-- </div>
@@ -675,7 +700,7 @@
 
         <!-- Footer Credits -->
         <div class="text-center font-pixel text-gray-500 text-lg mt-8 mb-4">
-            &copy; 2025 HUH?Ley!.<br>
+            &copy; 2025 NicoAki.<br>
             BEST VIEWED WITH NETSCAPE NAVIGATOR 800x600
         </div>
 
