ToS update & uploaded latest sketches

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
         /* --- DESKTOP SCROLLBAR SLIDER --- */
         input[type=range].desktop-scroll {
             -webkit-appearance: none;
+            appearance: none;
             width: 100%;
             background: transparent;
             margin: 0;
@@ -637,8 +638,8 @@
                             <img src="./assets/img/more_sketch/SHIP.png" class="h-full w-auto object-cover">
                             <div class="absolute bottom-4 left-4 bg-white/70 text-pink-500 px-2 font-pixel text-xl border border-pink-300">SHIP.PNG</div>
                         </div>
-                        <div class="flex-shrink-0 h-full w-auto aspect-[4/3] relative border-r-4 border-white group">
-                            <img src="./assets/img/zynnielle/ZYNNIELLE3.png?q=80&w=1000&auto=format&fit=crop" class="h-full w-auto object-cover">
+                        <div class="flex-shrink-0 h-full w-auto relative border-r-4 border-white group">
+                            <img src="./assets/img/more_sketch/SHIP2.png" class="h-full w-auto object-cover">
                             <div class="absolute bottom-4 left-4 bg-white/70 text-pink-500 px-2 font-pixel text-xl border border-pink-300">ZYNNIELLE3.PNG</div>
                         <!-- </div>
                          <div class="flex-shrink-0 h-full w-auto aspect-[4/3] relative border-r-4 border-black group">
@@ -693,6 +694,8 @@
                             <li>If the artist <u>fails to comply</u> to the allocated time <u>without prior message</u>. The payment will be returned as the progress created created by far. <u>However</u>, when the artist <u>is in an emergency</u>. The TAT will automatically be <u>extended to a week</u>.</li>
                             <li>The methods of payement are PayPal or GCash.</li>
                             <li>If the art is for <u>commercial uses</u>, there will be an <u>additional ₱1180/$20</u>.</li>
+                            <li>If the client wants an <u>additional character</u>, it'll be an <u>additional half of the bundle</u> (ex. Full Render: Full Body = ₱750 ; Additional character = +₱375)</li>
+                            <li>If you're <u>cancelling the work</u>, at least do it <u>before/during sketching/drafting</u> phase. If declined <u>during</u> rendering, the cancellation will <u>not proceed</u>.</li>
                             <li><b>ART USED TO TRAIN AI = REPORT.</b></li>
                             <li>Can do:<br>
                                 - Chibi<br>
