added secret code on bio

--- a/index.html
+++ b/index.html
@@ -350,7 +350,9 @@
                                     <h1 class="text-3xl font-pixel text-purple-600 mb-2">HI, I'M HUH?Ley! <i class="fas fa-sparkles text-yellow-400 floating"></i></h1>
                                     <p class="font-main text-sm text-gray-700 leading-relaxed mb-4">
                                         Hallo! NicoAki here, the Nico in the Aki ( ͡⁠°⁠ ͜⁠ʖ⁠ ͡⁠°⁠) || A.K.A HUH?Ley | <br>
-                                        Your local Illustrator, Character Designer, 2D Artist and other drawing shmuck
+                                        Your local Illustrator, Character Designer, 2D Artist and other drawing shmucks! <br><br>
+
+                                        <i>"creamcheese niom"</i>
                                     </p>
                                     
                                     <div class="bg-pink-100 p-2 border border-pink-300 rounded mb-2 font-pixel text-lg">
